--- a/phonebill-android/settings.gradle
+++ b/phonebill-android/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "PhoneBills"
+rootProject.name = "phonebill-android"
 include ':app'
