--- a/phonebill-android/app/src/main/AndroidManifest.xml
+++ b/phonebill-android/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.Phonebillandroid"
         tools:targetApi="31">
         <activity
+            android:name=".LaunchCreateNewPhoneBill"
+            android:exported="false" />
+        <activity
             android:name=".LaunchMenu"
             android:exported="false" />
         <activity
